# temporal-go-python-example

./: Dockerfile  README.md  docker-compose.yaml  run-tests.sh
activity-worker/: .gitignore  main.py  names.py  pyproject.toml  pytest.ini  workflow_tests.py
workflow-worker/: go.mod  main.go  names.go  trip_workflow.go  trip_workflow_test.go
