[tool.poetry]
name = "activity-worker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
temporalio = "^0.1a1"
pytest = "^7.1.1"
pytest-asyncio = "^0.18.3"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
